--- a/Integration/WithStrongName/WithStrongName.csproj
+++ b/Integration/WithStrongName/WithStrongName.csproj
@@ -5,14 +5,15 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{7DDD6A9E-7D35-4D5B-8B60-D9D32F3D521A}</ProjectGuid>
+    <ProjectGuid>{FDEE804A-3861-4C5A-9089-696DB9B19F24}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WithNugetAndInSolutionWeavers</RootNamespace>
-    <AssemblyName>WithNugetAndInSolutionWeavers</AssemblyName>
+    <RootNamespace>WithStrongName</RootNamespace>
+    <AssemblyName>WithStrongName</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
+    <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -40,21 +41,10 @@
     <Compile Include="Class1.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="FodyWeavers.xml">
-      <SubType>Designer</SubType>
-    </Content>
+    <Content Include="FodyWeavers.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Weavers\Weavers.csproj">
-      <Project>{3f4c62f3-f582-452f-b455-0cd5c89d96cf}</Project>
-      <Name>Weavers</Name>
-      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\..\ForIntegration\build\lib\Fody.targets" />
