--- a/Integration/WithNugetWeavers/WithNugetWeavers.csproj
+++ b/Integration/WithNugetWeavers/WithNugetWeavers.csproj
@@ -43,9 +43,7 @@
     <Content Include="FodyWeavers.xml" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\..\ForIntegration\build\lib\Fody.targets" />
