fix derive packages path from fody package location

--- a/Fody/Fody.targets
+++ b/Fody/Fody.targets
@@ -66,6 +66,7 @@
           DebugSymbols="$(DebugSymbols)"
           DebugType="$(DebugType)"
           DocumentationFilePath="@(DocFileItem->'%(FullPath)')"
+          MsBuildThisFileDirectory="$(MSBuildThisFileDirectory)"
       >
 
       <Output
