--- a/Fody/Fody.targets
+++ b/Fody/Fody.targets
@@ -38,8 +38,19 @@
     <ProjectWeaverXml>$(ProjectDir)FodyWeavers.xml</ProjectWeaverXml>
     <FodySignAssembly Condition="$(FodySignAssembly) == '' Or $(FodySignAssembly) == '*Undefined*'">$(SignAssembly)</FodySignAssembly>
     <FodyPath Condition="$(FodyPath) == '' Or $(FodyPath) == '*Undefined*'">$(MSBuildThisFileDirectory)..\..\</FodyPath>
-    <FodyAssembly>$(FodyPath)tasks\net46\Fody.dll</FodyAssembly>
   </PropertyGroup>
+  <Choose>
+    <When Condition="'$(MSBuildRuntimeType)'=='Core'">
+      <PropertyGroup>
+        <FodyAssembly>$(FodyPath)tasks\netstandard2.0\Fody.dll</FodyAssembly>
+      </PropertyGroup>
+    </When>
+    <Otherwise>
+      <PropertyGroup>
+        <FodyAssembly>$(FodyPath)tasks\net46\Fody.dll</FodyAssembly>
+      </PropertyGroup>
+    </Otherwise>
+  </Choose>
   <UsingTask
       TaskName="Fody.WeavingTask"
       AssemblyFile="$(FodyAssembly)" />
