--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -3,8 +3,11 @@
   <PropertyGroup>
     <TargetFrameworks>netcoreapp2.0;net46</TargetFrameworks>
     <Optimize>False</Optimize>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Build.Tasks.Core" Version="15.5.180"  />
+    <PackageReference Include="Microsoft.Build.Framework" Version="15.5.180" />
     <PackageReference Include="ApprovalTests" Version="3.*" Condition="$(TargetFramework) == 'net46'" />
     <PackageReference Include="ApprovalUtilities" Version="3.*" Condition="$(TargetFramework) == 'net46'" />
     <PackageReference Include="Moq" Version="4.*" />
