--- a/nuget.config
+++ b/nuget.config
@@ -2,5 +2,6 @@
 <configuration>
   <packageSources>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+    <add key="Local Integration Source" value="nugets" />
   </packageSources>
 </configuration>
