--- a/Integration/WithNoPdb/WithNoPdb.csproj
+++ b/Integration/WithNoPdb/WithNoPdb.csproj
@@ -4,5 +4,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Fody" Version="$(IntegrationVersion)" />
+    <PackageReference Include="Virtuosity.Fody" Version="1.20.1" />
   </ItemGroup>
 </Project>
