--- a/Fody/Fody.nuspec
+++ b/Fody/Fody.nuspec
@@ -15,14 +15,14 @@
     <tags>$tags$</tags>
   </metadata>
   <files>
-    <file src=".\bin\$configuration$\net46\Fody*.dll" target="tasks\netclassic" />
-    <file src=".\bin\$configuration$\net46\Mono*.dll" target="tasks\netclassic" />
-    <file src=".\bin\$configuration$\net46\Fody*.pdb" target="tasks\netclassic" />
-    <file src=".\bin\$configuration$\net46\Mono*.pdb" target="tasks\netclassic" />
-    <file src=".\bin\$configuration$\netstandard2.0\Fody*.dll" target="tasks\netstandard" />
-    <file src=".\bin\$configuration$\netstandard2.0\Mono*.dll" target="tasks\netstandard" />
-    <file src=".\bin\$configuration$\netstandard2.0\Fody*.pdb" target="tasks\netstandard" />
-    <file src=".\bin\$configuration$\netstandard2.0\Mono*.pdb" target="tasks\netstandard" />
+    <file src=".\bin\$configuration$\net46\Fody*.dll" target="netclassictask" />
+    <file src=".\bin\$configuration$\net46\Mono*.dll" target="netclassictask" />
+    <file src=".\bin\$configuration$\net46\Fody*.pdb" target="netclassictask" />
+    <file src=".\bin\$configuration$\net46\Mono*.pdb" target="netclassictask" />
+    <file src=".\bin\$configuration$\netstandard2.0\Fody*.dll" target="netstandardtask" />
+    <file src=".\bin\$configuration$\netstandard2.0\Mono*.dll" target="netstandardtask" />
+    <file src=".\bin\$configuration$\netstandard2.0\Fody*.pdb" target="netstandardtask" />
+    <file src=".\bin\$configuration$\netstandard2.0\Mono*.pdb" target="netstandardtask" />
     <file src="Fody.targets" target="build" />
   </files>
 </package>
