--- a/Integration/nuget.config
+++ b/Integration/nuget.config
@@ -2,6 +2,6 @@
 <configuration>
   <packageSources>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
-    <add key="Local Integration Source" value="nugets" />
+    <add key="Local Integration Source" value="../nugets" />
   </packageSources>
 </configuration>
