--- a/DummyAssembly/DummyAssembly.csproj
+++ b/DummyAssembly/DummyAssembly.csproj
@@ -2,5 +2,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net46</TargetFrameworks>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 </Project>
