--- a/Fody/Fody.targets
+++ b/Fody/Fody.targets
@@ -66,7 +66,7 @@
       Outputs="$(TargetPath)">
 
     <ItemGroup>
-      <FodyPackageDefinitions Include="%(PackageDefinitions.ResolvedPath)" Condition="@(Type)=='package'"/>
+      <FodyPackageDefinitions Include="%(PackageDefinitions.ResolvedPath)"/>
     </ItemGroup>
     <Fody.WeavingTask
           AssemblyPath="@(IntermediateAssembly)"
