--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -50,4 +50,7 @@
     <Reference Include="Mono.Cecil.Pdb" HintPath="..\Lib\Cecil\netstandard1.3\Mono.Cecil.Pdb.dll" />
     <Reference Include="Mono.Cecil.Rocks" HintPath="..\Lib\Cecil\netstandard1.3\Mono.Cecil.Rocks.dll" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Fody\AddinFinderTest\AddinFinderTest.cs" />
+  </ItemGroup>
 </Project>
