--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,9 @@ build_script:
 - cmd: 
     dotnet build Fody.sln --configuration Release
 
+    dotnet build Integration\Integration.sln --configuration Release
 
+    msbuild Integration\Tests\Tests.csproj /target:Restore
 
 test_script:
 - cmd: >-
