--- a/Integration/Tests/Tests.csproj
+++ b/Integration/Tests/Tests.csproj
@@ -4,8 +4,10 @@
     <TargetFramework>net46</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="System.Reflection.Metadata" Version="1.6.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
+    <ProjectReference Include="..\WithEmbeddedPdb\WithEmbeddedPdb.csproj" />
     <ProjectReference Include="..\WithNoPdb\WithNoPdb.csproj" />
     <ProjectReference Include="..\WithNugetAndInSolutionWeavers\WithNugetAndInSolutionWeavers.csproj" />
     <ProjectReference Include="..\WithNugetWeavers\WithNugetWeavers.csproj" />
